--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CLNDR.js</title>
+    <title>Yakusoku | Realtime appointments system</title>
     <link rel="stylesheet" href="css/clndr.css">
   </head>
   <body>
