--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="js/moment.min.js"></script>
     <script src="js/clndr.min.js"></script>
