--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -63,6 +63,7 @@
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/underscore.js"></script>
     <script src="js/moment.min.js"></script>
+    <script src="http://js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
     <script src="js/clndr.min.js"></script>
     <script src="js/app.js"></script>
   </body>
